--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require": {
     "php": ">=7.0",
     "ext-soap": "*",
-    "robrichards/wse-php": "2.0.2",
+    "goetas-webservices/xsd-reader": "0.*",
     "psr/log": "1.0.2",
     "psr/simple-cache": "1.0.0"
   },
