--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,12 @@
   "require": {
     "php": ">=7.0",
     "ext-soap": "*",
-    "goetas-webservices/xsd-reader": "0.*",
     "psr/log": "1.0.2",
     "psr/simple-cache": "1.0.0"
+  },
+  "require-dev": {
+    "monolog/monolog": "^1.23",
+    "phpfastcache/phpfastcache": "~6.0"
   },
   "autoload": {
     "psr-4": {
