--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,11 @@
     "phpunit/phpunit": "^7",
     "mockery/mockery": "^1",
     "phpdocumentor/phpdocumentor": "2.*",
-    "cvuorinen/phpdoc-markdown-public": "*"
+    "cvuorinen/phpdoc-markdown-public": "^0"
   },
   "autoload": {
     "psr-4": {
-      "mrcnpdlk\\Regon\\": "src/mrcnpdlk/Regon/"
+      "mrcnpdlk\\Regon\\": "src"
     }
   }
 }
