--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,14 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.2",
     "ext-soap": "*",
     "psr/log": "^1",
     "psr/simple-cache": "^1"
   },
   "require-dev": {
     "monolog/monolog": "^1",
-    "phpfastcache/phpfastcache": "~6.0",
+    "phpfastcache/phpfastcache": "^7",
     "phpunit/phpunit": "^7",
     "mockery/mockery": "^1",
     "phpdocumentor/phpdocumentor": "2.*",
