--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,15 @@
     "psr/log": "^1",
     "psr/simple-cache": "^1",
     "ext-json": "*",
-    "ext-simplexml": "*"
+    "ext-simplexml": "*",
+    "ext-dom": "*",
+    "mrcnpdlk/lib-configuration": "^0",
+    "mrcnpdlk/lib-mapper": "^0",
+    "mrcnpdlk/lib-exception": "^0",
+    "myclabs/php-enum": "^1"
   },
   "require-dev": {
-    "monolog/monolog": "^1",
-    "phpfastcache/phpfastcache": "^7",
-    "phpunit/phpunit": "^7",
-    "mockery/mockery": "^1",
-    "phpdocumentor/phpdocumentor": "2.*",
-    "cvuorinen/phpdoc-markdown-public": "^0"
+    "monolog/monolog": "^1"
   },
   "autoload": {
     "psr-4": {
