--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ coverage.clover
 composer.phar
 /vendor/
 /.idea
+.php_cs.cache
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
